--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </ul>
       </nav>
 
-      <a href="#" class="btn btn-primary">
+      <a href="#service" class="btn btn-primary">
         <span class="span">Get Your Ride</span>
 
         <span class="material-symbols-rounded">arrow_forward</span>
