--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
             <h1 class="h1 section-title">Auto Maintenance & Repair Service</h1>
 
             <p class="section-text">
-              Duis aute irure dolor in reprehenderit in voluptate velit esse Excepteur sint occaecat cupidatat non
-              proident.
+              Welcome to the Hub of TITU's car performace enhacements and upgrades.
             </p>
 
             <a href="#" class="btn">
@@ -168,7 +167,7 @@
                 <h3 class="h3 card-title">Engine Repair</h3>
 
                 <p class="card-text">
-                  Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
+                  Gets engine tuning for efficiency as well as performance mods.
                 </p>
 
                 <a href="#" class="btn-link">Read more</a>
@@ -186,7 +185,7 @@
                 <h3 class="h3 card-title">Brake Repair</h3>
 
                 <p class="card-text">
-                  Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
+                  Get bigger and better brake caliper for you high performance monster
                 </p>
 
                 <a href="#" class="btn-link">Read more</a>
@@ -204,7 +203,7 @@
                 <h3 class="h3 card-title">Tire Repair</h3>
 
                 <p class="card-text">
-                  Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
+                  From engine to body repairs get it all done
                 </p>
 
                 <a href="#" class="btn-link">Read more</a>
@@ -223,7 +222,7 @@
                 <h3 class="h3 card-title">Battery Repair</h3>
 
                 <p class="card-text">
-                  Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
+                Get new batteries and claim discount for your older ones.
                 </p>
 
                 <a href="#" class="btn-link">Read more</a>
@@ -247,7 +246,7 @@
                 <h3 class="h3 card-title">Steering Repair</h3>
 
                 <p class="card-text">
-                  Autem velaum iure reare aenderit rui in ea roluptate esse ruam moles
+                 Get original stock wheels as well as custom sparco wheels.
                 </p>
 
                 <a href="#" class="btn-link">Read more</a>
@@ -289,8 +288,7 @@
             <h2 class="h2 section-title">We’re Commited to Meet the quality</h2>
 
             <p class="section-text">
-              Quis autem vel eum iure reprehenderit qui in ea volu velit esse quam nihil molestiae consequatur, vel
-              illum eui dolorem eum fugiat ruo.
+              10+ years into the car industry with pure excellence and honesty has lead to us being one of the prominent names in the industry .
             </p>
 
             <p class="section-text">
@@ -438,7 +436,7 @@
           </a>
 
           <p class="footer-text">
-            Rerum necessitatibus saepe eveniet aut et voluptates repudiandae sint et molestiae non recusandae.
+            your one stop shop for all your car needs.
           </p>
 
           <ul class="social-list">
@@ -501,7 +499,7 @@
             <a href="tel:+01234567890" class="footer-link">
               <span class="material-symbols-rounded">call</span>
 
-              <span class="span">+01 2 3456 7890</span>
+              <span class="span">+91 1234567890</span>
             </a>
           </li>
 
@@ -517,7 +515,7 @@
             <address class="footer-link address">
               <span class="material-symbols-rounded">location_on</span>
 
-              <span class="span">21 King Street Melbourne, 3000, Australia</span>
+              <span class="span">SRM Institute of Science and Technology,Chennai</span>
             </address>
           </li>
 
@@ -533,7 +531,7 @@
     <div class="footer-bottom">
       <div class="container">
 
-        <p class="copyright">Copyright 2022, codewithsadee All Rights Reserved.</p>
+        <p class="copyright">Copyright 2023, TITUCODES All Rights Reserved.</p>
 
         <img src="./assets/images/footer-shape-2.png" width="778" height="335" loading="lazy" alt="Shape"
           class="shape shape-2">
